package com.lld.interviewquestions.carrental.product;

public enum VehicleType {
    FOUR_WHEELER,
    TWO_WHEELER
}

